# SkiaQtBug

./: CMakeLists.txt  README.md  main.cpp  main.qml  skiaitem.cpp  skiaitem.h
Skia/: skia.dll.exp  skia.dll.lib
